# qemu-experiments

./: .gitmodules  README.md
acubesat/: CMakeLists.txt  MCU_FLASH  conan-arm-profile  conanfile.py  mps2.ld  mps3.ld  mps4.ld
acubesat/src/: mcu.c  mcu.cpp  peripherals.c  platform.cpp  startup.s  startup_gcc.c
acubesat/src/drivers/: InternalFlash.cpp  InternalFlash.hpp  MCP9808.cpp
simple/: CMakeLists.txt  main.cpp  startup.cpp
simple-cm3/: CMakeLists.txt  README.md
simple-cm7/: CMakeLists.txt  README.md  libs.h  main.cpp  mps2.ld  startup.s
